<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.epiagregator.screens.signin.LoginActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/login_activity_sign_up_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_activity_sign_up_email_text_input_layout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_activity_sign_up_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:id="@+id/login_activity_sign_up_password_text_input_layout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_activity_sign_up_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_up"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:id="@+id/login_activity_sign_up_password_confirm_text_input_layout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_activity_sign_up_password_confirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password_confirm"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_up"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_activity_sign_up_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_up"
                        android:textStyle="bold" />

                    <TextView
                        android:clickable="true"
                        android:id="@+id/login_activity_sign_up_already_have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_activity_sign_up_already_have_account"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:padding="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/login_activity_sign_in_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/login_activity_sign_in_email_text_input_layout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_activity_sign_in_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:id="@+id/login_activity_sign_in_password_text_input_layout">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/login_activity_sign_in_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_activity_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />

                    <TextView
                        android:clickable="true"
                        android:id="@+id/login_activity_sign_in_create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_activity_sign_in_create_account"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:padding="4dp"/>
                </LinearLayout>
            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
